# zeta-backend

./: .flake8  .gitignore  main.py  py.json  pyproject.toml  requirements.txt  ruff.toml
apps/blog/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
apps/categories/: admin.py  models.py  serializers.py  urls.py  views.py
core/: settings.py  urls.py
