[project]
name = "zeta-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "django-environ==0.12.0",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.16.0",
    "pillow==11.2.1",
    "django-storages==1.14.6",
    "django-prose-editor[sanitize]",
    "psycopg==3.2.7"
]
